--- a/app.json
+++ b/app.json
@@ -24,7 +24,7 @@
       },
       "APP_NAME": {
           "description": "Copy-Paste the app name that you just typed above.",
-           "required": false
+           "required": True
       },
       "API_ID": {
           "description": "Get this value from https://my.telegram.org",
