--- a/app.json
+++ b/app.json
@@ -23,8 +23,8 @@
           "value": "True"
       },
       "APP_NAME": {
-          "description": "Copy-Paste the app name that you just typed above.",
-           "required": True
+          "description": "Copy-Paste the app name that you just typed above."
+
       },
       "API_ID": {
           "description": "Get this value from https://my.telegram.org",
