--- a/app.json
+++ b/app.json
@@ -24,7 +24,7 @@
       },
       "APP_NAME": {
           "description": "Copy-Paste the app name that you just typed above.",
-          "value":"linktb"
+          "required":false
 
       },
       "API_ID": {
